# RealSchool

./: .coverage  .dockerignore  .gitignore  Dockerfile  PLAN_DE_TRABAJO.md  PLAN_OPTIMIZACION_MOTOR.md  Prompt2.md  Prompt3.md  README.md  contextobase.md  mkdocs.yml  promptInicial.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  docs.yml
FasesPosteriores/: ARCHITECTURE_AND_BENCHMARK.md
benchmarks/: README.md  warm_start_quality.json  warm_start_years.json
docs/: index.md
docs/adr/: ADR-000-fuente-de-verdad.md  ADR-001-python-y-toolchain.md  ADR-002-or-tools-cp-sat.md  ADR-003-estrategia-de-pruebas.md  ADR-004-tiempo-discreto-segmentos.md  ADR-005-constraint-seam.md  ADR-006-adaptador-y-alcance-academico.md  ADR-007-sal-y-dsl.md  ADR-008-cir-y-optimizer-passes.md  ADR-009-pipeline-y-conflict-explanation.md  ADR-010-sdk-de-plugins.md  ADR-011-modelo-cp-sat.md  ADR-012-rule-engine-y-scoring-engine.md  ADR-013-motor-validacion-y-telemetria.md  ADR-014-metrics-reoptimizacion-simulacion-serializacion.md  ADR-015-formulacion-por-intervalos-y-escala.md  ADR-016-dataset-ds04-untis-real.md  ADR-017-warm-start.md  ADR-018-objetivo-de-calidad-estabilidad-de-aula.md  ADR-019-catalogo-canonico-de-restricciones.md  ADR-020-scoring-engine-tiers.md  ADR-021-benchmarking-estadistico-y-registro.md  ADR-022-multi-solver-milp-via-sal.md  ADR-023-optimizacion-dirigida-por-evidencia.md  ADR-024-capa-de-aplicacion-y-command-dispatcher.md  ADR-025-formato-schedule.md  ADR-026-cli-typer-schedule-engine.md  ADR-027-json-stream-y-senales.md  ADR-028-formato-bjs.md  ADR-029-distribucion-binario-nativo.md  ADR-030-documentacion-mkdocs.md  ADR-031-fachada-engine-service.md  ADR-032-app-escritorio-pyside6.md  ADR-033-semana-lectiva-por-seccion.md  ADR-TEMPLATE.md
docs/architecture/: bjs_format.md  decisions.md  overview.md  pipeline.md  scoring_tiers.md
docs/examples/: index.md
docs/reference/: application.md  cli.md  core.md  engine.md  plugins.md  sal.md  serialization.md
docs/sdk_guide/: constraints.md  exporters.md  importers.md  (+3 more)
packaging/: entry.py
scripts/: bench.py  benchmark.py  catalog.py  check.py  dashboard.py  demo_project.py  ds04_colegio_aleman.py  gap_analysis.py  regression_gate.py  warm_start_quality.py  warm_start_years.py
tests/: academic_strategies.py  cir_reference.py  cir_strategies.py  conftest.py  isolver_contract.py  plugin_contract.py  strategies.py  test_academic_adapter.py  test_academic_entities.py  test_app_commands.py  test_app_config.py  test_application_dispatcher.py  test_architecture.py  test_benchmark_stats.py  test_benchmarks.py  test_bjs_container.py  test_bjs_migration.py  test_bjs_rigor.py  test_bjs_validation.py  test_cir_lowering.py  test_cir_passes.py  test_cli.py  test_cli_project.py  test_complexity.py  test_constraint_catalog.py  test_core_entities.py  test_core_isolation.py  test_core_problem.py  test_core_time_grid.py  test_cpsat_smoke.py  test_daily_quality.py  test_dashboard.py  test_desktop_app.py  test_desktop_frontier.py  test_dsl_compiler.py  test_dsl_expressions.py  test_engine.py  test_engine_service.py  test_environment.py  test_examples.py  (+20 more)
(+158 files in other folders)
