[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduling-platform"
version = "0.1.0"
description = "Scheduling Optimization Platform — motor genérico de calendarización por restricciones (Módulo Académico)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ortools>=9.15",
    "pyyaml>=6.0",
    "psutil>=6.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-mermaid2-plugin>=1.1",
    "pytest-markdown-docs>=0.6",
]
dev = [
    "mypy>=2.3",
    "ruff>=0.15",
    "pytest>=9.1",
    "hypothesis>=6.156",
    "pytest-benchmark>=5.2",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
schedule-engine = "scheduling_platform.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scheduling_platform = ["py.typed"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
files = ["src", "tests", "scripts"]

[[tool.mypy.overrides]]
module = "ortools.*"
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
